--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,11 @@
       "type": "image/png",
       "sizes": "192x192"
     },
+    {
+      "src": "Logo farbig[1804].png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
    
     {
       "src": "logo512.png",
